[tool.poetry]
name = "forum"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
patisson-applauncher = {git = "https://github.com/Patisson-Company/_AppLauncher", extras = ["async_fastapi_pack"]}
fastapi = "^0.115.6"
python-dotenv = "^1.0.1"
patisson-request = {git = "https://github.com/Patisson-Company/_Request"}
redis = "^5.2.1"
python-ulid = "^3.0.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
